--- a/index.html
+++ b/index.html
@@ -96,15 +96,19 @@
 
       var script = document.createElement("script");
       script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-        }).catch((message) => {
-          alert(message);
-        });
-      };
+script.onload = () => {
+      // ⚠️ C'est la ligne CRUCIALE à ajouter pour GitHub Pages
+      // Elle force la décompression des fichiers .gz par le navigateur
+      UnityLoader.SystemInfo.mobile = true; 
+
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+      }).catch((message) => {
+        alert(message);
+      });
+    };
       document.body.appendChild(script);
     </script>
   </body>
