--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         productVersion: "2.0.0",
         showBanner: unityShowBanner,
         // errorHandler: function(err, url, line) {
-        //    alert("error " + err + " occurred at line " + line);
-        //    // Return 'true' if you handled this error and don't want Unity
-        //    // to process it further, 'false' otherwise.
-        //    return true;
+        //    alert("error " + err + " occurred at line " + line);
+        //    // Return 'true' if you handled this error and don't want Unity
+        //    // to process it further, 'false' otherwise.
+        //    return true;
         // },
       };
 
@@ -97,6 +97,9 @@
       var script = document.createElement("script");
       script.src = loaderUrl;
       script.onload = () => {
+        // 💡 Ligne ajoutée pour contourner les problèmes de compression sur GitHub Pages
+        UnityLoader.SystemInfo.mobile = true; 
+        
         createUnityInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
